applied formatting to symmetry package